Pull request 720: AG-50310: Fix hover in paywall for eula and privacy
Merge in SCITER/adguard-mini from 
AG-50310-paywall-hovers to master

Squashed commit of the following:

commit c794921fa3a46ff09a51d670ccc04d43acbc9dfc
Merge: 74d52137 61faac89
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Wed Jan 28 10:52:40 2026 +0300

    Merge branch 'master' into AG-50310-paywall-hovers

commit 74d5213706c963be5ad73fc4a3402ed8e2cad18e
Author: Vladislav Abdulmyanov <v.abdulmyanov@adguard.com>
Date:   Mon Jan 26 13:36:08 2026 +0300

    AG-50310: Fix hover in paywall for eula and privacy

--- a/AdguardMini/sciter-ui/modules/settings/components/Paywall/Paywall.module.pcss
+++ b/AdguardMini/sciter-ui/modules/settings/components/Paywall/Paywall.module.pcss
@@ -179,6 +179,16 @@ html:theme(light) {
         &_link {
             display: inline-block;
             margin: 0 *;
+            cursor: pointer;
+            >a {
+                transition: color linear 0.1s;
+            }
+
+            &:hover {
+                >a {
+                    color: var(--fills-buttons-main-button-hovered);
+                }
+            }
         }
     }
 }
